Fixes #8. Rearranges address block on mobile

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -191,6 +191,8 @@ span[class*="typcn-social-"] {
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
   h2.name {
     font-size: 3.5em;
+    line-height: 1em;
+    margin-bottom: 18px;
     font-weight: 900;
     .pos {
       font-weight: 600;
@@ -202,13 +204,15 @@ span[class*="typcn-social-"] {
     }
   }
   .review {
+    //TODO: media query to only do this for small and up
     p:first-child {
       font-size: 1.25em;
     }
     font-size: 1.05em;
   }
   .contact {
-    margin-top: 105px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     hr {
       margin-top: 5px;
       margin-bottom: 5px;
